--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: bentemplates
-Title: What the Package Does (one line, title case)
+Title: RMarkdown templates
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Benjamin", "Louis", email = "contact@benjaminlouis-stat.fr", role = c("aut", "cre"))
+Description: This pacakge contains some rmarkdown templates I use
 Depends: R (>= 3.6.0)
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
