quotes template ready

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(parse_amount)
 export(process_address)
 export(process_boxheader)
 export(process_freelance)
+export(process_services)
+export(process_total)
 export(remove_header)
 export(up_first)
 importFrom(dplyr,as_tibble)
@@ -12,9 +14,17 @@ importFrom(dplyr,case_when)
 importFrom(dplyr,everything)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,mutate_if)
+importFrom(dplyr,pull)
+importFrom(dplyr,recode)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,summarize)
+importFrom(dplyr,vars)
 importFrom(fontawesome,fa)
 importFrom(kableExtra,column_spec)
+importFrom(kableExtra,footnote)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(tidyr,drop_na)
