--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export("%>%")
 export(parse_amount)
 export(process_address)
+export(process_annexes)
+export(process_bank)
 export(process_boxheader)
 export(process_freelance)
 export(process_services)
@@ -23,10 +25,19 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,vars)
 importFrom(fontawesome,fa)
+importFrom(htmltools,HTML)
 importFrom(kableExtra,column_spec)
 importFrom(kableExtra,footnote)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
+importFrom(purrr,walk)
+importFrom(rmarkdown,render)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,unite)
+importFrom(xml2,read_html)
+importFrom(xml2,xml_add_child)
+importFrom(xml2,xml_children)
+importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_new_root)
+importFrom(xml2,xml_remove)
